--- a/app/src/main/res/layout-night/fragment_profile.xml
+++ b/app/src/main/res/layout-night/fragment_profile.xml
@@ -100,6 +100,17 @@
             app:layout_constraintStart_toEndOf="@+id/tvTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
 
+        <Button
+            android:id="@+id/btnShowRecipes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Show Recipes"
+            android:textColor="@color/colorPrimaryText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
             android:layout_width="wrap_content"
