--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Created by Igor Stevanovic on 11/17/20 12:17 AM
+  ~ Created by Igor Stevanovic on 11/28/20 12:20 AM
   ~ Copyright (c) 2020 MrCooker. All rights reserved.
-  ~ Last modified 11/17/20 12:15 AM
+  ~ Last modified 11/28/20 12:20 AM
   ~ Licensed under the GPL-3.0 License;
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
@@ -23,9 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/your_profile"
+        android:text="@string/user_profile"
         android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +61,6 @@
             android:id="@+id/ivProfileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_profile"
             app:avatarBackgroundColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:text="@string/show_my_recipes"
+            android:text="@string/show_user_recipes"
             android:textColor="@color/colorPrimaryText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
