--- a/app/src/main/res/layout-night/activity_recipe.xml
+++ b/app/src/main/res/layout-night/activity_recipe.xml
@@ -144,6 +144,19 @@
                     app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
                 <TextView
+                    android:id="@+id/tvOwnerName"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center_horizontal"
+                    android:text=""
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tvIngredients"
+                    app:layout_constraintTop_toBottomOf="@+id/tvTime" />
+
+                <TextView
                     android:id="@+id/tvInstructions"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
