--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,7 +18,7 @@
         android:icon="@drawable/ic_home"/>
 
     <item android:id="@+id/conversationsFragment"
-        android:title="@string/conversations"
+        android:title="@string/messages"
         android:icon="@drawable/ic_conversations"/>
 
     <item android:id="@+id/placeholder"
