--- a/app/src/main/res/layout-night/message_row_right.xml
+++ b/app/src/main/res/layout-night/message_row_right.xml
@@ -18,11 +18,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
 
-    <ImageView
+    <com.github.abdularis.civ.AvatarImageView
         android:id="@+id/ivMessageProfile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/ic_profile"
+        app:avatarBackgroundColor="@color/colorPrimary"
+        app:text="A"
+        app:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
