--- a/app/src/main/res/drawable/message_background_right.xml
+++ b/app/src/main/res/drawable/message_background_right.xml
@@ -14,7 +14,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/colorSplashBackground"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <corners android:bottomRightRadius="30dp"
         android:bottomLeftRadius="30dp"
