--- a/app/src/main/res/layout/message_row_left.xml
+++ b/app/src/main/res/layout/message_row_left.xml
@@ -16,8 +16,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:layout_height="wrap_content">
 
     <com.github.abdularis.civ.AvatarImageView
         android:id="@+id/ivMessageProfile"
@@ -31,16 +30,16 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        app:layout_constraintWidth_max="200dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/message_background_left"
-        android:elevation="5dp"
+        android:elevation="2dp"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivMessageProfile"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_max="200dp">
 
         <TextView
             android:id="@+id/messageText"
