--- a/app/src/main/res/layout/message_row_right.xml
+++ b/app/src/main/res/layout/message_row_right.xml
@@ -15,8 +15,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.github.abdularis.civ.AvatarImageView
         android:id="@+id/ivMessageProfile"
@@ -30,16 +29,16 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        app:layout_constraintWidth_max="200dp"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/message_background_right"
-        android:elevation="5dp"
         android:padding="10dp"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivMessageProfile"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_max="200dp">
 
         <TextView
             android:id="@+id/messageText"
