--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,7 +61,6 @@
             android:id="@+id/ivProfileImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_profile"
             app:avatarBackgroundColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +97,17 @@
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/tvTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+
+        <Button
+            android:id="@+id/btnShowRecipes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/show_my_recipes"
+            android:textColor="@color/colorPrimaryText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
