--- a/app/src/main/res/layout-night/fragment_add_recipe.xml
+++ b/app/src/main/res/layout-night/fragment_add_recipe.xml
@@ -202,10 +202,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="150dp"
+                    android:layout_marginBottom="100dp"
                     android:text="@string/cancel"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/adView"
                     app:layout_constraintEnd_toStartOf="@+id/tvAdd"
                     app:layout_constraintTop_toBottomOf="@+id/rvImages" />
 
@@ -215,12 +215,23 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="150dp"
+                    android:layout_marginBottom="100dp"
                     android:text="@string/add"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/adView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/rvImages" />
+
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/adView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="70dp"
+                    app:adSize="BANNER"
+                    app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
